--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,48 @@
-# Compiled class file
-*.class
+# maven ignore
+target/
+*.versionsBackup
+.factorypath
 
-# Log file
+# eclipse ignore
+.settings/
+.project
+.classpath
+*rebel.xml
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.cache
+*.diff
+*.patch
+*.tmp
 
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# system ignore
+.DS_Store
+Thumbs.db
+gitlabci/.generated
+.vscode
+/bin
+
+# dev properties
+src/main/resources/application-dev.yml
+src/main/resources/application-remote.yml
+src/main/java/org/hzero/iam/config/HiamExtraDataManager.java
+
+init-local-database-dev.sh
+/customize/
+git
+src/main/resources/rebel.xml
